fix: add covers

--- a/dz4(book_card)/book_card/src/App.css
+++ b/dz4(book_card)/book_card/src/App.css
@@ -16,9 +16,10 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  padding: 40px 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  padding: 40px 1vw;
   row-gap: 30px;
   font-size: calc(10px + 2vmin);
   color: white;
